add remote polit

--- a/donkeycar/parts/web_controller/templates/vehicle.html
+++ b/donkeycar/parts/web_controller/templates/vehicle.html
@@ -89,6 +89,8 @@
               <option value="user">User (d)</option>
               <option value="local">Local Pilot (d)</option>
               <option value="local_angle">Local Angle (d)</option>
+              <option value="remote">Remote Pilot (d)</option>
+              <option value="remote_angle">Remote Angle (d)</option>
             </select>
           </div>
           <div class="form-group">
